--- a/register.html
+++ b/register.html
@@ -10,7 +10,7 @@
     class="min-h-screen bg-gray-50 bg-[url('/waves.svg')] bg-fixed bg-bottom bg-no-repeat"
   >
     <div class="flex items-center justify-between p-6">
-      <a class="flex items-center gap-2" href="#">
+      <a class="flex items-center gap-2" href="./register.html">
         <svg
           class="h-10 text-green-600"
           xmlns="http://www.w3.org/2000/svg"
@@ -27,7 +27,7 @@
       </a>
       <div>
         <a
-          href="#"
+          href="./login.html"
           class="rounded-md bg-green-600 py-2 px-4 font-semibold text-white shadow-lg outline-none ring-green-500 transition duration-150 ease-in-out hover:bg-green-700 hover:shadow-xl focus:shadow-xl focus:ring-2 focus:ring-offset-2"
           >Sign in</a
         >
@@ -118,14 +118,14 @@
       </div>
         <div>
           <a
-          href="#"
+          href="./verify-email.html"
           class="flex justify-center items-center rounded-md bg-green-600 py-2 px-4 font-semibold text-white shadow-lg outline-none ring-green-500 transition duration-150 ease-in-out hover:bg-green-700 hover:shadow-xl focus:shadow-xl focus:ring-2 focus:ring-offset-2"
           >Sign up</a
         >
         </div>
         </form>
         <div class="flex justify-center items-center mt-6">
-          <a href="#" class="text-sm font-medium text-green-600 hover:text-green-500">Already have an account?</a>
+          <a href="./login.html" class="text-sm font-medium text-green-600 hover:text-green-500">Already have an account?</a>
         </div>
       </div>
     </div>
