заменил login.html на index.html

--- a/register.html
+++ b/register.html
@@ -27,7 +27,7 @@
       </a>
       <div>
         <a
-          href="./login.html"
+          href="./index.html"
           class="rounded-md bg-green-600 py-2 px-4 font-semibold text-white shadow-lg outline-none ring-green-500 transition duration-150 ease-in-out hover:bg-green-700 hover:shadow-xl focus:shadow-xl focus:ring-2 focus:ring-offset-2"
           >Sign in</a
         >
@@ -125,7 +125,7 @@
         </div>
         </form>
         <div class="flex justify-center items-center mt-6">
-          <a href="./login.html" class="text-sm font-medium text-green-600 hover:text-green-500">Already have an account?</a>
+          <a href="./index.html" class="text-sm font-medium text-green-600 hover:text-green-500">Already have an account?</a>
         </div>
       </div>
     </div>
