--- a/verify-email.html
+++ b/verify-email.html
@@ -27,7 +27,7 @@
       </a>
       <div class="flex gap-2">
         <a
-          href="./login.html"
+          href="./index.html"
           class="rounded-md bg-gray-200 py-2 px-4 font-semibold text-gray-900 shadow-lg outline-none ring-gray-300 transition duration-150 ease-in-out hover:bg-gray-300 hover:shadow-xl focus:shadow-xl focus:ring-2 focus:ring-offset-2"
           >Sign Out</a>
 
