--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
         <div>
           <a
-          href="./login.html"
+          href="./index.html"
           class="flex justify-center items-center rounded-md bg-green-600 py-2 px-4 font-semibold text-white shadow-lg outline-none ring-green-500 transition duration-150 ease-in-out hover:bg-green-700 hover:shadow-xl focus:shadow-xl focus:ring-2 focus:ring-offset-2"
           >Sign In</a
         >
